<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".VerifyActivity">

    <TextView
        android:id="@+id/txt_verify1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verf"
        android:textColor="@android:color/white"
        android:textSize="38dp"
        android:textAlignment="center"
        android:layout_above="@id/txt_verify2"
        android:layout_marginBottom="7dp"/>

    <TextView
        android:id="@+id/txt_verify2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white2"
        android:textAlignment="center"
        android:layout_above="@id/edt_txt_verify1"
        android:layout_marginBottom="50dp"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/edt_txt_verify1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/codehere"
        android:textCursorDrawable="@android:color/white"
        android:textColorHint="@color/white2"
        android:gravity="center"
        android:ellipsize="start"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/btn_verify"
        android:paddingBottom="20dp"/>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="SEND"
        android:textColorHint="@color/white"
        android:background="@drawable/button_mod"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        />

    <TextView
        android:id="@+id/txt_verify3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resen"
        android:layout_below="@+id/btn_verify"
        android:textAlignment="center"
        android:textColor="@color/white2"
        android:layout_marginTop="15dp"/>
</RelativeLayout>